# wtf-peewee

./: .travis.yml  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.py
.github/workflows/: tests.yaml  wheels.yaml
example/: app.py
example/static/css/: style.css
example/templates/: base.html
example/templates/includes/: comments.html
example/templates/posts/: add.html  detail.html  edit.html  index.html
wtfpeewee/: fields.py  orm.py  tests.py
